# Pokemon-Stream-Tools

./: LICENSE  README.md  requirements.txt  setup.cfg
src/shinyOdds/: __init__.py  calcShiny.py  shinyOdds.py
src/streamEnder/: streamEnder.py
src/twitchBot/: README.md  bot.py  botCommands.py
