[metadata]
name = pokemonStreamTools-drk98
version = 0.0.1
author = Daniel Kramer
author_email = drkspace@gmail.com
description = Tools for streaming pokemon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drk98/plotAnalyzer
project_urls =
    Bug Tracker = https://github.com/drk98/plotAnalyzer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    scipy~=1.7.1
    numpy~=1.21.4
    matplotlib~=3.4.3
    watchdog~=2.1.3
    obs-websocket-py~=0.5.3
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    shinyOdds = shinyOdds.shinyOdds:main
    streamEnder = streamEnder.streamEnder:main